--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.0",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -29,6 +30,7 @@
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
     "redux": "^4.2.1",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
