--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.16",
+    "i18next-browser-languagedetector": "^7.0.2",
     "jquery": "^3.7.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lightgallery": "^0.9.0",
