--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-i18next": "^13.0.0",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.6.0",
