--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.16",
+    "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "jquery": "^3.7.0",
     "path": "^0.12.7",
@@ -33,6 +34,7 @@
     "react-redux": "^8.1.0",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
+    "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1"
